Slight MainDriver.java update - addressing warnings